# scanservjs-epsonv600

./: README.md  justfile  package-lock.json
app-server-rs/: Cargo.toml  config.toml  scanservjs-epsonv600.service
app-server-rs/src/: config.rs  device.rs  error.rs  files.rs  main.rs
app-server-rs/src/routes/: context.rs  files.rs  mod.rs  scan.rs
app-server-rs/src/scanner/: command.rs  mod.rs  request.rs
app-ui/: eslint.config.js  package-lock.json  package.json  vite.config.js
app-ui/src/: App.vue  main.js
app-ui/src/classes/: constants.js  device.js  manifest-builder.js  settings.js
app-ui/src/components/: Files.vue  Navigation.vue  Scan.vue  Settings.vue
app-ui/src/styles/: main.scss
docs/superpowers/plans/: 2026-04-02-frontend-dep-upgrade.md
